tests/paczka2/big_fuzzy/64151189.err
Error in line 1: izgYWDExWx S995 93,2
Error in line 4: izgYWDExWx S848 59,4
Error in line 3: BXCiEvSx8s S553 11,0
Error in line 11: S407 S553 206,92
Error in line 19: S407 S407 19,9
Error in line 22: BXCiEvSx8s S553 0,1
Error in line 33: S407 S995 106,0
Error in line 45: S407 S407 94,5
Error in line 40: DDgBQ S553 49,6
Error in line 38: IE3QoOwMt S995 195,3
Error in line 52: 5BM S553 22,4
Error in line 51: S407 S848 24,3
Error in line 56: BXCiEvSx8s S995 79,9
Error in line 65: T0vkaRczY S995 98,8
Error in line 66: T0vkaRczY S553 26,6
Error in line 72: BXCiEvSx8s S553 66,47
Error in line 71: T0vkaRczY S995 2,7
Error in line 43: izgYWDExWx S553 28,2
Error in line 77: BXCiEvSx8s S553 42,0
Error in line 80: IE3QoOwMt S553 50,3
Error in line 107: BXCiEvSx8s S407 28,6
Error in line 100: 5BM S848 12,6
Error in line 97: DDgBQ S995 35,9
Error in line 116: DDgBQ S553 97,7
Error in line 121: BXCiEvSx8s S848 10,9
Error in line 120: IE3QoOwMt S407 50,2
Error in line 145: IE3QoOwMt S407 52,95
Error in line 142: BXCiEvSx8s S553 43,9
Error in line 151: BXCiEvSx8s S848 31,8
Error in line 159: S407 S848 75,4
Error in line 154: 5BM S995 3,2
Error in line 161: S407 S553 43,3
Error in line 156: T0vkaRczY S995 36,2
Error in line 171: S407 S407 20,4
Error in line 141: IE3QoOwMt S995 47,0
Error in line 175: izgYWDExWx S407 19,6
Error in line 169: T0vkaRczY S848 82,2
Error in line 163: 5BM S407 500,3
Error in line 182: T0vkaRczY S407 99,7
Error in line 184: 5BM S553 74,0
Error in line 190: izgYWDExWx S457 9,1
Error in line 197: T0vkaRczY S848 7,3
Error in line 208: 5BM S407 74,8
Error in line 209: IE3QoOwMt S407 237,0
Error in line 212: 5BM S848 48,6
Error in line 201: izgYWDExWx S407 24,3
Error in line 215: IE3QoOwMt S848 75,4
Error in line 218: T0vkaRczY S553 21,7
Error in line 216: 5BM S407 64,1
Error in line 230: T0vkaRczY S848 33,9
Error in line 241: 5BM S407 -2,6
Error in line 234: T0vkaRczY S553 60,3
Error in line 238: 5BM S407 71,8
Error in line 247: BXCiEvSx8s S848 90,3
